Single spaced code and put 'related' links in new style

--- a/site/pages/v4/design/borders-en.hbs
+++ b/site/pages/v4/design/borders-en.hbs
@@ -8,134 +8,138 @@
 }
 ---
 <div class="wb-prettify all-pre">
-  <div class="row">
-    <div class="col-md-8">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h2 class="panel-title">Table of contents</h2>
-        </div>
-        <div class="panel-body">
-          <ul>
-            <li><a href="#description">Description</a></li>
-            <li><a href="#options">Border options</a></li>
-            <li><a href="#headings">Borders on headings</a></li>
-            <li><a href="#radius">Remove border radius</a></li>
-          </ul>
-        </div>
-      </div>
+ <div class="row">
+  <div class="col-md-8">
+   <div class="panel panel-default">
+    <div class="panel-heading">
+     <h2 class="panel-title">Table of contents</h2>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
-        </div>
-        <div class="list-group"><a href="headings-en.html#underline" class="list-group-item">Headings: Underline<span class="wb-inv"> - Design guide</span></a></div>
-      </div>
+    <div class="panel-body">
+     <ul>
+      <li><a href="#description">Description</a></li>
+      <li><a href="#options">Border options</a></li>
+      <li><a href="#headings">Borders on headings</a></li>
+      <li><a href="#radius">Remove border radius</a></li>
+     </ul>
     </div>
+   </div>
   </div>
-  <h2 class="page-header" id="description">Description</h2>
-  <p>Borders can be added to grids or other elements in order to separate or call attention to a section of content.</p>
-  <h2 class="page-header" id="options">Border options</h2>
-  <p>There are 4 borders that can be added:</p>
-  <ul>
-    <li><code>.brdr-tp</code></li>
-    <li><code>.brdr-rght</code></li>
-    <li><code>.brdr-bttm</code></li>
-    <li><code>.brdr-lft</code></li>
-  </ul>
-  <p>Borders can be added to a grid cell. Since grids have a left and right gutter, the border will be appear on outside edge of the gutter.</p>
-  <div class="row">
-    <div class="col-md-3 brdr-tp">
-      <p class="mrgn-tp-md">Top border</p>
-      <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp&quot;&gt;</code></p>
-    </div>
-    <div class="col-md-3 brdr-rght">
-      <p class="mrgn-tp-md">Right border</p>
-      <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-rght&quot;&gt;</code></p>
-    </div>
-    <div class="col-md-3 brdr-bttm">
-      <p class="mrgn-tp-md">Top bottom</p>
-      <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-bttm&quot;&gt;</code></p>
-    </div>
-    <div class="col-md-3 brdr-lft">
-      <p class="mrgn-tp-md">Left border</p>
-      <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-lft&quot;&gt;</code></p>
-    </div>
+  <div class="col-md-4">
+   <div class="well">
+    <h2 class="h3 mrgn-tp-0">Related </h2>
+    <ul class="list-unstyled">
+     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
+      <ul class="list-unstyled mrgn-lft-md">
+       <li><a href="headings-en.html#underline">Underline headings<span class="wb-inv"> - Design guide</span></a></li>
+      </ul>
+     </li>
+    </ul>
+   </div>
   </div>
-  <p>Borders can be added to content.</p>
-  <div class="row">
-    <div class="col-md-3">
-      <p class="brdr-tp"><span class="mrgn-tp-md mrgn-bttm-md">Top border<br>
-        <code>&lt;p class=&quot;brdr-tp&quot;&gt;</code></span></p>
-    </div>
-    <div class="col-md-3">
-      <p class="brdr-rght"><span class="mrgn-tp-md mrgn-bttm-md">Right border<br>
-        <code>&lt;p class=&quot;brdr-rght&quot;&gt;</code></span></p>
-    </div>
-    <div class="col-md-3">
-      <p class="brdr-bttm"><span class="mrgn-tp-md mrgn-bttm-md">Bottom border<br>
-        <code>&lt;p class=&quot;brdr-bttm&quot;&gt;</code></span></p>
-    </div>
-    <div class="col-md-3">
-      <p class="brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md">Left border<br>
-        <code>&lt;p class=&quot;brdr-lft&quot;&gt;</code></span></p>
-    </div>
+ </div>
+ <h2 class="page-header" id="description">Description</h2>
+ <p>Borders can be added to grids or other elements in order to separate or call attention to a section of content.</p>
+ <h2 class="page-header" id="options">Border options</h2>
+ <p>There are 4 borders that can be added:</p>
+ <ul>
+  <li><code>.brdr-tp</code></li>
+  <li><code>.brdr-rght</code></li>
+  <li><code>.brdr-bttm</code></li>
+  <li><code>.brdr-lft</code></li>
+ </ul>
+ <p>Borders can be added to a grid cell. Since grids have a left and right gutter, the border will be appear on outside edge of the gutter.</p>
+ <div class="row">
+  <div class="col-md-3 brdr-tp">
+   <p class="mrgn-tp-md">Top border</p>
+   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp&quot;&gt;</code></p>
   </div>
-  <p>Multiple borders can be added to the same element.</p>
-  <div class="row">
-    <div class="col-md-3 brdr-tp brdr-lft">
-      <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Top and left border <br>
-        <code>&lt;div class=&quot;col-md-3 brdr-tp brdr-lft&quot;&gt;</code></span></p>
-    </div>
-    <div class="col-md-3 brdr-bttm brdr-rght">
-      <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Bottom and right border <br>
-        <code>&lt;div class=&quot;col-md-3 brdr-bttm brdr-rght&quot;&gt;</code></span></p>
-    </div>
-    <div class="col-md-6">
-      <div class="brdr-tp brdr-rght brdr-bttm brdr-lft">
-        <p class="mrgn-tp-md mrgn-bttm-md mrgn-lft-md mrgn-rght-md">Top, right, bottom and left border <br>
-          <code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></p>
-      </div>
-    </div>
+  <div class="col-md-3 brdr-rght">
+   <p class="mrgn-tp-md">Right border</p>
+   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-rght&quot;&gt;</code></p>
   </div>
-  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-    <div class="col-md-6">
-      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
-    <div class="col-md-6 brdr-lft">
-      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
+  <div class="col-md-3 brdr-bttm">
+   <p class="mrgn-tp-md">Top bottom</p>
+   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-bttm&quot;&gt;</code></p>
   </div>
-  <h2 class="page-header" id="radius">Remove border radius</h2>
-  <p>Apply <code>brdr-rds-0</code> to remove the border radius that appears on certain design elements,</p>
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="well">
-        <p>Default well</p>
-      </div>
-      <pre><code>&lt;div class=&quot;well&quot;&gt;
+  <div class="col-md-3 brdr-lft">
+   <p class="mrgn-tp-md">Left border</p>
+   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-lft&quot;&gt;</code></p>
+  </div>
+ </div>
+ <p>Borders can be added to content.</p>
+ <div class="row">
+  <div class="col-md-3">
+   <p class="brdr-tp"><span class="mrgn-tp-md mrgn-bttm-md">Top border<br>
+    <code>&lt;p class=&quot;brdr-tp&quot;&gt;</code></span></p>
+  </div>
+  <div class="col-md-3">
+   <p class="brdr-rght"><span class="mrgn-tp-md mrgn-bttm-md">Right border<br>
+    <code>&lt;p class=&quot;brdr-rght&quot;&gt;</code></span></p>
+  </div>
+  <div class="col-md-3">
+   <p class="brdr-bttm"><span class="mrgn-tp-md mrgn-bttm-md">Bottom border<br>
+    <code>&lt;p class=&quot;brdr-bttm&quot;&gt;</code></span></p>
+  </div>
+  <div class="col-md-3">
+   <p class="brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md">Left border<br>
+    <code>&lt;p class=&quot;brdr-lft&quot;&gt;</code></span></p>
+  </div>
+ </div>
+ <p>Multiple borders can be added to the same element.</p>
+ <div class="row">
+  <div class="col-md-3 brdr-tp brdr-lft">
+   <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Top and left border <br>
+    <code>&lt;div class=&quot;col-md-3 brdr-tp brdr-lft&quot;&gt;</code></span></p>
+  </div>
+  <div class="col-md-3 brdr-bttm brdr-rght">
+   <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Bottom and right border <br>
+    <code>&lt;div class=&quot;col-md-3 brdr-bttm brdr-rght&quot;&gt;</code></span></p>
+  </div>
+  <div class="col-md-6">
+   <div class="brdr-tp brdr-rght brdr-bttm brdr-lft">
+    <p class="mrgn-tp-md mrgn-bttm-md mrgn-lft-md mrgn-rght-md">Top, right, bottom and left border <br>
+     <code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></p>
+   </div>
+  </div>
+ </div>
+ <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+  <div class="col-md-6">
+   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+   <p>(Info goes here)</p>
+  </div>
+  <div class="col-md-6 brdr-lft">
+   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+   <p>(Info goes here)</p>
+  </div>
+ </div>
+ <h2 class="page-header" id="radius">Remove border radius</h2>
+ <p>Apply <code>brdr-rds-0</code> to remove the border radius that appears on certain design elements,</p>
+ <div class="row">
+  <div class="col-sm-6">
+   <div class="well">
+    <p>Default well</p>
+   </div>
+   <pre><code>&lt;div class=&quot;well&quot;&gt;
   ...
 &lt;/div&gt;</code></pre>
-    </div>
-    <div class="col-sm-6 ">
-      <div class="well brdr-rds-0">
-        <p>Well with border radius removed</p>
-      </div>
-      <pre><code>&lt;div class=&quot;well brdr-rds-0 &quot;&gt;
+  </div>
+  <div class="col-sm-6 ">
+   <div class="well brdr-rds-0">
+    <p>Well with border radius removed</p>
+   </div>
+   <pre><code>&lt;div class=&quot;well brdr-rds-0 &quot;&gt;
   ...
 &lt;/div&gt;</code></pre>
-    </div>
   </div>
-  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-    <div class="col-md-6">
-      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
-    <div class="col-md-6 brdr-lft">
-      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
+ </div>
+ <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+  <div class="col-md-6">
+   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+   <p>(Info goes here)</p>
   </div>
+  <div class="col-md-6 brdr-lft">
+   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+   <p>(Info goes here)</p>
+  </div>
+ </div>
 </div>
