Updated 'related' code and fixed issues
Added documentation to mention that Bootstrap progress bar should not be
used per #83 and also documented that dropdown menus don't work per
issue #84

--- a/site/pages/v4/design/floats-en.hbs
+++ b/site/pages/v4/design/floats-en.hbs
@@ -26,13 +26,10 @@
   <div class="col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="alignment-en.html">Alignment<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="grids-en.html#reflow">Grids:  Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="alignment-en.html">Alignment<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="grids-en.html#reflow">Grids:  Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></li>
     </ul>
    </div>
   </div>
