--- a/site/pages/v4/design/forms-en.hbs
+++ b/site/pages/v4/design/forms-en.hbs
@@ -36,20 +36,16 @@
   <div class="col-md-4 mrgn-bttm-lg">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html">Form validation<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html">Feedback form<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/forms-en.html">Forms<span class="wb-inv"> - Accessibility guide</span></a></li>
-       <li><a href="../accessibility/keyboard-en.html">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html">Form validation<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html">Feedback form<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/forms-en.html">Forms<span class="wb-inv"> - Accessibility guide</span></a></li>
+     <li><a href="../accessibility/keyboard-en.html">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
    </div>
   </div>
