--- a/site/pages/v4/design/links-en.hbs
+++ b/site/pages/v4/design/links-en.hbs
@@ -25,26 +25,21 @@
   <div class="col-md-4 pull-right mrgn-bttm-lg">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="alerts-en.html#links">Alert links<span class="wb-inv"> - Design guide</span></a></li>
-       <li> <a href="buttons-en.html">Button links<span class="wb-inv"> - Design guide</span></a></li>
-       <li> <a href="listgroup-en.html#links">List group links<span class="wb-inv"> - Design guide</span></a></li>
-       <li> <a href="pagination-en.html">Pagination links<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/links-en.html">Links <span class="wb-inv">- Accessibility guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../writing/principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
-       <li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="alerts-en.html#links">Alert links<span class="wb-inv"> - Design guide</span></a></li>
+     <li> <a href="buttons-en.html">Button links<span class="wb-inv"> - Design guide</span></a></li>
+     <li> <a href="listgroup-en.html#links">List group links<span class="wb-inv"> - Design guide</span></a></li>
+     <li> <a href="pagination-en.html">Pagination links<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/links-en.html">Links <span class="wb-inv">- Accessibility guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../writing/principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
    </div>
   </div>
