--- a/site/pages/v4/design/progress-en.hbs
+++ b/site/pages/v4/design/progress-en.hbs
@@ -8,6 +8,9 @@
 }
 ---
 <div class="wb-prettify all-pre">
+ <div class="alert alert-danger">
+  <p class="lead">Do not use this Bootstrap effect.  Instead use the <a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html">Progress polyfill</a> feature in WET.  The documentation below will be updated shortly to clarify this recommendation.</p>
+ </div>
  <div class="row">
   <div class="col-md-8">
    <div class="panel panel-default">
@@ -30,12 +33,9 @@
   <div class="col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html">Progress polyfill<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html">Progress polyfill<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
    </div>
   </div>
