--- a/site/pages/v4/design/headings-en.hbs
+++ b/site/pages/v4/design/headings-en.hbs
@@ -28,18 +28,14 @@
   <div class="col-md-4 pull-right">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/headings-en.html">Headings and page titles<span class="wb-inv"> - Accessibility guide </span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../writing/principals-en.html#heading">Heading principals<span class="wb-inv"> - Writing guide</span></a></li>
-       <li><a href="../writing/formatting-en.html#headings">Heading and subheading formatting<span class="wb-inv"> - Writing guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/headings-en.html">Headings and page titles<span class="wb-inv"> - Accessibility guide </span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../writing/principals-en.html#heading">Heading principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="../writing/formatting-en.html#headings">Heading and subheading formatting<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
    </div>
   </div>
