--- a/site/pages/v4/design/images-en.hbs
+++ b/site/pages/v4/design/images-en.hbs
@@ -28,26 +28,21 @@
   <div class="col-md-4 pull-right mrgn-bttm-lg">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="visible-en.html#replacement">Icons<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="visible.html#replacement">Image replacement<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html">Lightbox<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html">Tabbed interface: Carousel<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html">Data picture<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/images-en.html">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../writing/principals-en.html#image">Images<span class="wb-inv"> - Writing guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="visible-en.html#replacement">Icons<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="visible.html#replacement">Image replacement<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html">Lightbox<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html">Tabbed interface: Carousel<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html">Data picture<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/images-en.html">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../writing/principals-en.html#image">Images<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
    </div>
   </div>
