--- a/site/pages/v4/design/labels-en.hbs
+++ b/site/pages/v4/design/labels-en.hbs
@@ -25,18 +25,14 @@
   <div class="col-md-4 pull-right">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="colour-en.html">Colour<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="colour-en.html">Colour<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
    </div>
   </div>
