--- a/site/pages/v4/design/lists-en.hbs
+++ b/site/pages/v4/design/lists-en.hbs
@@ -33,18 +33,14 @@
   <div class="col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="listgroup-en.html">List group <span class="wb-inv">- Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a></li>
-       <li><a href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="listgroup-en.html">List group <span class="wb-inv">- Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
    </div>
   </div>
