--- a/site/pages/v4/design/sizing-en.hbs
+++ b/site/pages/v4/design/sizing-en.hbs
@@ -26,16 +26,13 @@
   <div class="col-md-4 pull-right mrgn-bttm-lg">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related</h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li> <a href="buttons-en.html#buttons-sizes">Button sizing<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="forms-en.html#forms-control-sizes">Form sizing<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="pagination-en.html#sizing">Pagination  sizing<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="tables-en.html#tables-condensed">Table  sizing<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="wells-en.html#sizing">Well  sizing<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="buttons-en.html#buttons-sizes">Button sizing<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="forms-en.html#forms-control-sizes">Form sizing<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="pagination-en.html#sizing">Pagination  sizing<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="tables-en.html#tables-condensed">Table  sizing<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="wells-en.html#sizing">Well  sizing<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
    </div>
   </div>
