--- a/site/pages/v4/design/wells-en.hbs
+++ b/site/pages/v4/design/wells-en.hbs
@@ -26,13 +26,10 @@
   <div class="col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="alerts-en.html">Alerts<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="panels-en.html">Panels<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="alerts-en.html">Alerts<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="panels-en.html">Panels<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
    </div>
   </div>
