--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -298,17 +298,13 @@
   <div class="col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../design/blockquotes-en.html">Blockquotes<span class="wb-inv"><span class="wb-inv"> - Design guide</span></span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/quotations-en.html">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../design/blockquotes-en.html">Blockquotes<span class="wb-inv"><span class="wb-inv"> - Design guide</span></span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/quotations-en.html">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
    </div>
   </div>
@@ -823,22 +819,17 @@
   <div class="col-md-4 pull-right">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../writing/principals-en.html#heading">Heading principals- Writing guide</a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../writing/principals-en.html#heading">Heading principals- Writing guide</a></li>
+    </ul> 
+	<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
    </div>
   </div>
@@ -1117,24 +1108,19 @@
   <div class="pull-right col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
-       <li><a href="../design/pills-en.html">Pills<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="../design/pills-en.html">Pills<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
    </div>
   </div>
@@ -1190,22 +1176,17 @@
   <div class="pull-right col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <ul class="list-unstyled">
-     <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
-      </ul>
-     </li>
-     <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-      <ul class="list-unstyled mrgn-lft-md">
-       <li><a href="../accessibility/links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></li>
-      </ul>
-     </li>
+    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
+    </ul>
+    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+     <li><a href="../accessibility/links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
    </div>
   </div>
