--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -530,17 +530,13 @@
   </div>
   <div class="well">
    <h2 class="h3 mrgn-tp-0">Related </h2>
-   <ul class="list-unstyled">
-    <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
-     </ul>
-    </li>
-    <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></li>
-     </ul>
-    </li>
+   <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
+   </ul>
+   <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></li>
    </ul>
   </div>
  </div>
@@ -595,18 +591,15 @@
   <div class="well">
    <h2 class="h3 mrgn-tp-0">Related </h2>
    <ul class="list-unstyled">
-    <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></li>
-     </ul>
-    </li>
-    <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
-      <li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
-      <li><a href="../design/pills-en.html">Pills<span class="wb-inv"> - Design guide</span></a></li>
-     </ul>
-    </li>
+   <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></li>
+   </ul>
+   <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
+    <li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
+    <li><a href="../design/pills-en.html">Pills<span class="wb-inv"> - Design guide</span></a></li>
    </ul>
   </div>
  </div>
@@ -631,22 +624,17 @@
   </div>
   <div class="well">
    <h2 class="h3 mrgn-tp-0">Related </h2>
-   <ul class="list-unstyled">
-    <li><span class="fa fa-font text-muted"></span> <strong>Writing guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
-     </ul>
-    </li>
-    <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
-     </ul>
-    </li>
-    <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../accessibility/links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></li>
-     </ul>
-    </li>
+   <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
+   </ul>
+   <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
+   </ul>
+   <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../accessibility/links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></li>
    </ul>
   </div>
  </div>
@@ -669,19 +657,15 @@
   </div>
   <div class="well">
    <h2 class="h3 mrgn-tp-0">Related </h2>
-   <ul class="list-unstyled">
-    <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../design/images-en.html">Images<span class="wb-inv"> - Design guide</span></a></li>
-      <li><a href="../design/icons-en.html">Icons<span class="wb-inv"> - Design guide</span></a></li>
-      <li><a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html">Lightbox<span class="wb-inv"> - Design guide</span></a></li>
-     </ul>
-    </li>
-    <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../accessibility/images-en.html">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
-     </ul>
-    </li>
+   <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../design/images-en.html">Images<span class="wb-inv"> - Design guide</span></a></li>
+    <li><a href="../design/icons-en.html">Icons<span class="wb-inv"> - Design guide</span></a></li>
+    <li><a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html">Lightbox<span class="wb-inv"> - Design guide</span></a></li>
+   </ul>
+   <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../accessibility/images-en.html">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
    </ul>
   </div>
  </div>
@@ -716,18 +700,14 @@
   </div>
   <div class="well">
    <h2 class="h3 mrgn-tp-0">Related </h2>
-   <ul class="list-unstyled">
-    <li><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../design/tables-en.html">Tables<span class="wb-inv"> - Design guide</span></a></li>
-      <li><a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html">Tables plug-in<span class="wb-inv"> - Design guide</span></a></li>
-     </ul>
-    </li>
-    <li><span class="fa fa-wheelchair text-muted"></span> <strong>Accessibility guide</strong>
-     <ul class="list-unstyled mrgn-lft-md">
-      <li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
-     </ul>
-    </li>
+   <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+   <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../design/tables-en.html">Tables<span class="wb-inv"> - Design guide</span></a></li>
+    <li><a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html">Tables plug-in<span class="wb-inv"> - Design guide</span></a></li>
+   </ul>
+   <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+    <li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
    </ul>
   </div>
  </div>
