Removed opening strong tag . minor coding error

--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -823,7 +823,7 @@
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../writing/principals-en.html#heading">Heading principals- Writing guide</a></li>
     </ul> 
-	<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+	<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
