More strong tags removed. minor coding error fixed

--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -1112,7 +1112,7 @@
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
      <li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
@@ -1180,7 +1180,7 @@
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> <strong>Design guide</h3>
+    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
