Added custom css to visible.html demo page

--- a/site/pages/v4/design/visible-en.hbs
+++ b/site/pages/v4/design/visible-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Invisible and visible content",
 	"language": "en",
 	"altLangPrefix": "visible",
-	"css": "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome",
+	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/visible-demo"],
 	"dateModified": "2014-02-28"
 }
 ---
