Added blurb to writing guide limiting scope
Also fixed Web site to website text

Fixed #94

--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -8,6 +8,9 @@
 }
 ---
 <div class="wb-prettify all-pre">
+ <div class="alert alert-info">
+  <p class="lead">This is a community-developed product and not intended to replace the Canada.ca site guidelines.</p>
+ </div>
  <div class="panel panel-default wet-boew-toc">
   <div class="panel-heading">
    <h2 class="panel-title">Table of contents</h2>
@@ -314,7 +317,7 @@
  <ul>
   <li>on links on a web page</li>
   <li>to indicate steps in a procedure (see the section &ldquo;Procedures&rdquo;).</li>
-  <li>indicate GUI elements in software or specific locations on a web site.</li>
+  <li>indicate GUI elements in software or specific locations on a website.</li>
  </ul>
  <div class="well">
   <h4 class="mrgn-tp-0">Example</h4>
@@ -1543,7 +1546,7 @@
   <li><strong>Internet</strong> Initial caps</li>
   <li><strong>intranet</strong> All lowercase</li>
   <li><strong>Web</strong> The word web is only capitalized when it is used in a proper name, such as World Wide Web.</li>
-  <li><strong>web site</strong> Two words, lowercase.</li>
+  <li><strong>website</strong> Two words, lowercase.</li>
   <li><strong>web application</strong> Two words, lowercase.</li>
   <li><strong>web page</strong> Two words, lowercase.</li>
   <li><strong>web form</strong> Two words, lowercase.</li>
