--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -7,6 +7,9 @@
 	"dateModified": "2014-02-28"
 }
 ---
+<div class="alert alert-info">
+  <p class="lead">This is a community-developed product and not intended to replace the Canada.ca site guidelines.</p>
+ </div>
 <p>Users approach online content very differently than they do print material&mdash;they are on a hunt. They are actively searching for information rather than passively accepting the information as it is presented. When users arrive on a Web page they quickly scan the information to see if they have found what they are looking for. If they don't see it immediately, they move on&mdash;they are following the scent (or trace) of information. Users also tend to scan online text looking for keywords and familiar phrases rather than reading each word.</p>
 <p>To reach users, you need to write information so that users can quickly scan and find what they are looking for. As well, you will need to rewrite content that was originally intended for a print audience to suit a Web audience.</p>
 <div class="panel panel-default">
@@ -98,7 +101,7 @@
   </div>
  </div>
  <div class="mrgn-lft-md mrgn-rght-md">
-  <p>Many different users may come to your Web site; they may be individuals, business representatives, intermediaries and other professionals, media or youth. Each type of user is different and needs different content. You must define each type of user so that you can provide the unique information that each needs.</p>
+  <p>Many different users may come to your website; they may be individuals, business representatives, intermediaries and other professionals, media or youth. Each type of user is different and needs different content. You must define each type of user so that you can provide the unique information that each needs.</p>
   <p>You may, however, need to develop content to serve many different users. If that is the case, focus on your primary users or break your users into smaller groups with similar requirements.</p>
  </div>
 </div>
@@ -115,7 +118,7 @@
   </div>
  </div>
  <div class="mrgn-lft-md mrgn-rght-md">
-  <p>Users visit a Web site to complete their tasks. Define your users' tasks and either prioritize them based on how frequently users perform them or sequence them if they involve a series of smaller tasks. Your users may also want to complete many tasks in one visit, so you will need to consider how you can make it easy for them to do so. By defining your users' tasks you will be able to understand their reasons for coming to your Web site, and you will be able to provide the information they need.</p>
+  <p>Users visit a website to complete their tasks. Define your users' tasks and either prioritize them based on how frequently users perform them or sequence them if they involve a series of smaller tasks. Your users may also want to complete many tasks in one visit, so you will need to consider how you can make it easy for them to do so. By defining your users' tasks you will be able to understand their reasons for coming to your website, and you will be able to provide the information they need.</p>
  </div>
 </div>
 <h3 id="need">What information do they need?</h3>
@@ -151,7 +154,7 @@
   </div>
  </div>
  <div class="mrgn-lft-md mrgn-rght-md">
-  <p>As well as benefiting users, the Web site needs to serve your organization's goals. To ensure that the content balances your business needs and your users' needs, define your goals for the site and decide how the content will meet those goals.</p>
+  <p>As well as benefiting users, the website needs to serve your organization's goals. To ensure that the content balances your business needs and your users' needs, define your goals for the site and decide how the content will meet those goals.</p>
  </div>
 </div>
 <h2 class="page-header" id="architecture">Content architecture</h2>
@@ -431,7 +434,7 @@
   </div>
  </div>
  <div class="mrgn-lft-md mrgn-rght-md">
-  <p>Professionally written material pays close attention to the details. Ensure that your content is focused on your audience and is clear, concise, consistent, and grammatically correct. There are many style guides available, both online and in hard copy, to help you write solid, grammatically correct text. The credibility of a Web site depends on the quality of the text.</p>
+  <p>Professionally written material pays close attention to the details. Ensure that your content is focused on your audience and is clear, concise, consistent, and grammatically correct. There are many style guides available, both online and in hard copy, to help you write solid, grammatically correct text. The credibility of a website depends on the quality of the text.</p>
  </div>
 </div>
 <h3 id="search">Write to be found</h3>
@@ -449,7 +452,7 @@
   </div>
  </div>
  <div class="mrgn-lft-md mrgn-rght-md">
-  <p>Many users turn to a Web site's search tool to find the information they are looking for. Search tools try to match the users' search terms to a Web page by comparing the search terms to page titles, headings, text, and metadata. The search tool then displays the Web pages that most closely match the search terms.</p>
+  <p>Many users turn to a website's search tool to find the information they are looking for. Search tools try to match the users' search terms to a Web page by comparing the search terms to page titles, headings, text, and metadata. The search tool then displays the Web pages that most closely match the search terms.</p>
   <p>The key to providing users with the search results they are looking for is to use the terms and phrases in the title, headings, text, and metadata that users are likely to use when they are searching for your content. It is good practice to identify those common search terms and phrases as you are developing the content and to use them often and consistently in the titles, headings, and text of your content, as well as in the page's metadata. Avoid using expressions, jargon, metaphors, or puns&mdash;in short, any terms that cannot be taken literally.</p>
   <p>Many of your users rely on external search engines, such as Google. External search engines try to match users' search terms with a Web page's title, headings, and text. By including those search terms in your title, headings, and text, the search engine will be able to take users to the content they are looking for.</p>
   <p>To ensure there is no confusion when users are reviewing their search results, use a unique page title and include a concise summary of the content of the page in the page description section of the metadata.</p>
@@ -492,20 +495,20 @@
   <h4>The 1/20th of a second opinion</h4>
   <p>Research shows that users form an opinion of a site within 1/20th of a second.</p>
   <blockquote class="mrgn-bttm-lg">
-   <p>The researchers also believe that these quickly formed first   impressions last because of what is known to psychologists as the "halo   effect". If people believe a Web site looks good, then this positive   quality will spread to other areas, such as the Web   site's content. Since people like to be right, they will continue to   use the Web site that made a good first impression, as this will further   confirm that their initial decision was a good one.</p>
+   <p>The researchers also believe that these quickly formed first   impressions last because of what is known to psychologists as the "halo   effect". If people believe a website looks good, then this positive   quality will spread to other areas, such as the website's content. Since people like to be right, they will continue to   use the website that made a good first impression, as this will further   confirm that their initial decision was a good one.</p>
    <p class="text-right">-BBC<br>
     <a href="http://news.bbc.co.uk/2/hi/technology/4616700.stm">First impressions count for Web</a></p>
   </blockquote>
   <h4>Aesthetics and the user experience</h4>
   <p>Research shows that the presentation and design of a site can positively or negatively affect the users' experience and even affect the site's credibility</p>
   <blockquote class="mrgn-bttm-lg">
-   <p>According to a 2002 study: How Do People Evaluate a Web Site's Credibility?,   the 'appeal of the overall visual design of a site, including layout,   typography, font size, and colour schemes,' is the number one factor we   use to evaluate a Web   site's credibility.</p>
+   <p>According to a 2002 study: How Do People Evaluate a website's Credibility?,   the 'appeal of the overall visual design of a site, including layout,   typography, font size, and colour schemes,' is the number one factor we   use to evaluate a website's credibility.</p>
    <p>The more we learn about people, and how our brains process   information, the more we learn the truth of that phrase: form and   function aren't separate items. If we believe that style somehow exists   independent of functionality, that we can treat aesthetics   and function as two separate pieces, then we ignore the evidence that   beauty is much more than decoration. Our brains can't help but agree.</p>
    <p class="text-right">-A List Apart<br>
     <a href="http://www.alistapart.com/articles/indefenseofeyecandy/">In defense of eye candy</a></p>
   </blockquote>
   <h4>Aesthetics and usability</h4>
-  <p>Users think aesthetically pleasing Web site designs are easier to use than site designs that are less pleasing. This is known as the <strong>aesthetic-usability effect</strong>. However, proper usability testing is still recommended. Aesthetics do not replace or equate to usability. Aesthetics simply enhance and complement usability. </p>
+  <p>Users think aesthetically pleasing website designs are easier to use than site designs that are less pleasing. This is known as the <strong>aesthetic-usability effect</strong>. However, proper usability testing is still recommended. Aesthetics do not replace or equate to usability. Aesthetics simply enhance and complement usability. </p>
   <p>That said, proper usability testing is still recommended. Aesthetics do not   replace or equate to usability. Aesthetics simply enhance and compliment   usability. </p>
   <blockquote class="mrgn-bttm-lg">
    <p>Aesthetic designs are more effective at fostering positive design   attitude than unaesthetic design, and make people more tolerant of   design problems ' Such personal and positive relationships with a design   evoke feelings of affection, loyalty, and patience   &mdash; all significant factors in the long-term usability and overall   success of a design.</p>
