--- a/site/pages/v4/writing/index-en.hbs
+++ b/site/pages/v4/writing/index-en.hbs
@@ -7,6 +7,9 @@
 	"dateModified": "2014-02-28"
 }
 ---
+<div class="alert alert-info">
+  <p class="lead">This is a community-developed product and not intended to replace the Canada.ca site guidelines.</p>
+ </div>
 <div class="row">
  <div class="col-md-8">
   <div class="row">
