--- a/site/pages/v4/design/lists-en.hbs
+++ b/site/pages/v4/design/lists-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Lists",
 	"language": "en",
 	"altLangPrefix": "lists",
-	"css": "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome",
+	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-02-28"
 }
 ---
