Rules are principles, not principals

--- a/site/pages/v4/role/author-en.hbs
+++ b/site/pages/v4/role/author-en.hbs
@@ -6,7 +6,7 @@
 	"dateModified": "2014-02-28"
 }
 ---
-<p>An <strong>author, content creator or content coordinator</strong> commonly needs to know the design options and writing standards and principals.</p>
+<p>An <strong>author, content creator or content coordinator</strong> commonly needs to know the design options and writing standards and principles.</p>
 <div class="row">
  <div class="col-md-6">
   <div class="panel panel-default">
@@ -25,10 +25,10 @@
     <h2 class="panel-title">Writing</h2>
    </div>
    <div class="panel-body">
-    <p>Although a webmaster or developer does not create the content, they must still know basic content creation principals.</p>
+    <p>Although a webmaster or developer does not create the content, they must still know basic content creation principles.</p>
     <p>Refer to:</p>
     <ul class="clmn-2-md list-inline">
-     <li><a href="../writing/principals-en.html" class="btn btn-primary mrgn-bttm-sm btn-block">Content creation principals</a></li>
+     <li><a href="../writing/principals-en.html" class="btn btn-primary mrgn-bttm-sm btn-block">Content creation principles</a></li>
      <li><a href="../writing/formatting-en.html" class="btn btn-primary btn-block">Content formatting</a></li>
     </ul>
    </div>
