--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -824,7 +824,7 @@
     <h2 class="h3 mrgn-tp-0">Related </h2>
     <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../writing/principals-en.html#heading">Heading principals- Writing guide</a></li>
+     <li><a href="../writing/principals-en.html#heading">Heading principles- Writing guide</a></li>
     </ul> 
 	<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
@@ -1113,7 +1113,7 @@
     <h2 class="h3 mrgn-tp-0">Related </h2>
     <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="../writing/principals-en.html#lists">List principles<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
     <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
@@ -1181,7 +1181,7 @@
     <h2 class="h3 mrgn-tp-0">Related </h2>
     <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="principals-en.html#links">Link principles<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
     <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
