--- a/site/pages/v4/design/headings-en.hbs
+++ b/site/pages/v4/design/headings-en.hbs
@@ -34,7 +34,7 @@
     </ul>
     <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../writing/principals-en.html#heading">Heading principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="../writing/principals-en.html#heading">Heading principles<span class="wb-inv"> - Writing guide</span></a></li>
      <li><a href="../writing/formatting-en.html#headings">Heading and subheading formatting<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
    </div>
