--- a/site/pages/v4/design/links-en.hbs
+++ b/site/pages/v4/design/links-en.hbs
@@ -38,7 +38,7 @@
     </ul>
     <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../writing/principals-en.html#links">Link principals<span class="wb-inv"> - Writing guide</span></a></li>
+     <li><a href="../writing/principals-en.html#links">Link principles<span class="wb-inv"> - Writing guide</span></a></li>
      <li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
    </div>
