--- a/site/pages/v4/role/webmaster-en.hbs
+++ b/site/pages/v4/role/webmaster-en.hbs
@@ -6,7 +6,7 @@
 	"dateModified": "2014-02-28"
 }
 ---
-<p>A <strong>webmaster or developer</strong> commonly needs to know the design options, content creation principals, usability principals and accessibility requirements.</p>
+<p>A <strong>webmaster or developer</strong> commonly needs to know the design options, content creation principles, usability principles and accessibility requirements.</p>
 <div class="row">
  <div class="col-md-3">
   <div class="panel panel-default">
@@ -25,8 +25,8 @@
     <h2 class="panel-title">Content creation</h2>
    </div>
    <div class="panel-body">
-    <p>Although a webmaster or developer does not create the content, they must still know basic content creation principals.</p>
-    <p>Refer to: <a href="../writing/principals-en.html" class="btn btn-primary">Content creation principals</a></p>
+    <p>Although a webmaster or developer does not create the content, they must still know basic content creation principles.</p>
+    <p>Refer to: <a href="../writing/principals-en.html" class="btn btn-primary">Content creation principles</a></p>
    </div>
   </div>
  </div>
@@ -36,7 +36,7 @@
     <h2 class="panel-title">Usability</h2>
    </div>
    <div class="panel-body">
-    <p>All usability principals must be adhered to.</p>
+    <p>All usability principles must be adhered to.</p>
     <p>Refer to: <a href="../usability/index-en.html" class="btn btn-primary">Usability guide</a></p>
    </div>
   </div>
