--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -1,6 +1,6 @@
 ---
 {
-	"title": "Content creation principals",
+	"title": "Content creation principles",
 	"language": "en",
 	"altLangPrefix": "principals",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
