Close an unclosed a tag

--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -539,7 +539,7 @@
    </ul>
    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-    <li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></li>
+    <li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></a></li>
    </ul>
   </div>
  </div>
