Moved reflow documentation to new page
Also removed references to InfoZone from Writing guide
Added missing images for opacity and position documentation

--- a/site/pages/v4/design/index-en.hbs
+++ b/site/pages/v4/design/index-en.hbs
@@ -52,6 +52,7 @@
     <li><a href="floats-en.html">Floats</a></li>
     <li><a href="grids-en.html">Grids</a></li>
     <li><a href="proximity-en.html">Margin proximity </a></li>
+	<li><a href="reflow-en.html">Reflowing content around grids</a></li>
    </ul>
   </div>
   <div class="col-md-3">
