--- a/site/pages/v4/design/opacity-en.hbs
+++ b/site/pages/v4/design/opacity-en.hbs
@@ -40,61 +40,61 @@
    <tr>
     <td><code>opct-100</code></td>
     <td>100% opacity</td>
-    <td><img width="100" height="50" class="opct-100" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-100" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-100">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-90</code></td>
     <td>90% opacity</td>
-    <td><img width="100" height="50" class="opct-90" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-90" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-90">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-80</code></td>
     <td>80% opacity</td>
-    <td><img width="100" height="50" class="opct-80" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-80" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-80">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-70</code></td>
     <td>70% opacity</td>
-    <td><img width="100" height="50" class="opct-70" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-70" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-70">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-60</code></td>
     <td>60% opacity</td>
-    <td><img width="100" height="50" class="opct-60" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-60" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-60">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-50</code></td>
     <td>50% opacity</td>
-    <td><img width="100" height="50" class="opct-50" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-50" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-50">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-40</code></td>
     <td>40% opacity</td>
-    <td><img width="100" height="50" class="opct-40" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-40" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-40">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-30</code></td>
     <td>30% opacity</td>
-    <td><img width="100" height="50" class="opct-30" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-30" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-30">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-20</code></td>
     <td>20% opacity</td>
-    <td><img width="100" height="50" class="opct-20" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-20" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-20">Text</p></td>
    </tr>
    <tr>
     <td><code>opct-10</code></td>
     <td>10% opacity</td>
-    <td><img width="100" height="50" class="opct-10" alt="demo image" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png"></td>
+    <td><img width="100" height="50" class="opct-10" alt="demo image" src="images/position-mini-3.png"></td>
     <td><p class="opct-10">Text</p></td>
    </tr>
   </tbody>
@@ -111,17 +111,17 @@
  </div>
  <h2 class="page-header" id="examples">Opacity examples</h2>
  <div class="row">
-  <div class="col-md-6"> <img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+  <div class="col-md-6"> <img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
    <div class="row">
     <div class="col-md-8 pstn-tp-md pstn-rght-md">
      <div class="row">
-      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png" alt="" class="img-responsive">
+      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-3.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">125 years of parks</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-2.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="images/position-mini-2.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Parks Canada Review</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-1.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-1.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Lost Arctic Ships</p>
        </a></div>
      </div>
@@ -156,17 +156,17 @@
 &lt;/div&gt;</code></pre>
    </div>
   </div>
-  <div class="col-md-6"> <img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+  <div class="col-md-6"> <img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
    <div class="row">
     <div class="col-md-8 pstn-tp-md pstn-rght-md mrgn-tp-md mrgn-rght-md">
      <div class="row">
-      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png" alt="" class="img-responsive">
+      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-3.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">125 years of parks</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-2.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="images/position-mini-2.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Parks Canada Review</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-1.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-1.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Lost Arctic Ships</p>
        </a></div>
      </div>
@@ -205,7 +205,7 @@
  <div class="row mrgn-tp-lg">
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md pstn-lft-md">
        <div class="col-md-12">
@@ -230,7 +230,7 @@
   </div>
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md pstn-lft-md ">
        <div class="col-md-12">
@@ -257,7 +257,7 @@
  <div class="row">
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md col-md-12">
        <p class="text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
@@ -278,7 +278,7 @@
   </div>
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md col-md-12 mrgn-bttm-lg">
        <p class="text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
