--- a/site/pages/v4/design/position-en.hbs
+++ b/site/pages/v4/design/position-en.hbs
@@ -87,17 +87,17 @@
  </div>
  <h2 class="page-header" id="examples">Positioning examples</h2>
  <div class="row">
-  <div class="col-md-6"> <img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+  <div class="col-md-6"> <img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
    <div class="row">
     <div class="col-md-8 pstn-tp-md pstn-rght-md">
      <div class="row">
-      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png" alt="" class="img-responsive">
+      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-3.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">125 years of parks</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-2.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="images/position-mini-2.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Parks Canada Review</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-1.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-1.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Lost Arctic Ships</p>
        </a></div>
      </div>
@@ -132,17 +132,17 @@
 &lt;/div&gt;</code></pre>
    </div>
   </div>
-  <div class="col-md-6"> <img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+  <div class="col-md-6"> <img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
    <div class="row">
     <div class="col-md-8 pstn-tp-md pstn-rght-md mrgn-tp-md mrgn-rght-md">
      <div class="row">
-      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-3.png" alt="" class="img-responsive">
+      <div class="col-md-4 opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-3.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">125 years of parks</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-2.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"> <img width="100" height="50" src="images/position-mini-2.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Parks Canada Review</p>
        </a></div>
-      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position-mini-1.png" alt="" class="img-responsive">
+      <div class="col-md-4  opct-90"> <a href="#"><img width="100" height="50" src="images/position-mini-1.png" alt="" class="img-responsive">
        <p class="small well brdr-rds-0 well-sm">Lost Arctic Ships</p>
        </a></div>
      </div>
@@ -181,7 +181,7 @@
  <div class="row mrgn-tp-lg">
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md pstn-lft-md">
        <div class="col-md-12">
@@ -206,7 +206,7 @@
   </div>
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md pstn-lft-md ">
        <div class="col-md-12">
@@ -233,7 +233,7 @@
  <div class="row">
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md col-md-12">
        <p class="text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
@@ -254,7 +254,7 @@
   </div>
   <div class="col-md-6">
    <div class="row">
-    <div class="col-md-12"><img width="700" height="190" src="http://wet-boew.github.io/wet-boew/demos/grids/images/position.png" alt="" class="img-responsive">
+    <div class="col-md-12"><img width="700" height="190" src="images/position.png" alt="" class="img-responsive">
      <div class="row">
       <div class="pstn-bttm-md col-md-12 mrgn-bttm-lg">
        <p class="text-right opct-80 well brdr-rds-0 well-sm mrgn-bttm-0"><strong>I love camping</strong> </p>
